--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+.idea/inspectionProfiles/Project_Default.xml
 
 # Gradle
 .idea/**/gradle.xml
